fix: label should align left when it occupy the whole line (#2517)

--- a/components/form/style/index.less
+++ b/components/form/style/index.less
@@ -47,6 +47,7 @@ input[type="checkbox"] {
     cursor: @cursor-disabled;
   }
 }
+
 // These classes are used on elements with <label> descendants
 .ant-radio,
 .ant-checkbox {
@@ -84,6 +85,7 @@ input[type="checkbox"] {
     text-align: right;
     vertical-align: middle;
     padding: 7px 0;
+    display: inline-block;
 
     label {
       color: @label-color;
